--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,27 @@ body {
 	height: 800px;*/
 }
 
+#endSplash {
+	width: 500px;
+	height: 250px;
+	margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    z-index: 100;
+	background-color: #344;
+	text-align: center;
+}
+
+#retryButton {
+	width: 50px;
+	height: 50px;
+	background-color: blue;
+}
+
+#messageText {
+	vertical-align: middle;
+}
+
 td {
     cursor:pointer;
     width:30px; height:30px;
